[project]
name = "basic-agentic-ai-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix[evals]>=15.10.1",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "openai>=2.37.0",
    "openinference-instrumentation-openai>=0.1.49",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
